--- a/2013-08-zierikzee/index.html
+++ b/2013-08-zierikzee/index.html
@@ -99,7 +99,7 @@
 <br>Hafenmolle
 <p><img src=2013-07-30_01:31:17-DSCF6258.JPG>
 <p><img src=2013-07-30_02:57:32-DSCF6308.JPG>
-<br>Rotterdamm
+<br>Rotterdam
 <p><img src=2013-07-30_03:05:16-DSCF6327.JPG>
 <br>Pallettenarchitektur am drittgrössten Hafen der Welt
 <p><img src=2013-07-31_05:23:14-DSCF6464.JPG>
@@ -107,7 +107,7 @@
 <p><img src=2013-08-01_08:28:02-DSCF6834.JPG>
 <br>F__K YEAH!
 <p><img src=2013-08-01_23:01:59-DSCF6840.JPG>
-<br>GEEN RIJHWIELEN PLAIISEN
+<br>GEEN RIJWIELEN PLAIISEN
 <p><img src=2013-08-02_06:55:25-DSCF6887.JPG>
 <p class=dark><img src=2013-07-22_04:45:28-DSCF3696.JPG>
 <p><img src=2013-08-02_06:59:49-DSCF6896.JPG>
@@ -117,4 +117,4 @@
 <p><img src=2013-08-02_08:22:08-DSCF6960.JPG>
 <p><img src=2013-08-02_08:21:50-DSCF6959.JPG>
 <p class=dark><img src=2013-08-02_08:10:13-DSCF6944.JPG>
-<p class=dark>Vielen Dank!</p>
+<p class=dark>THE END</p>
