add zierikzee wappen

--- a/2013-08-zierikzee/index.html
+++ b/2013-08-zierikzee/index.html
@@ -53,6 +53,7 @@
 &nbsp;
 <a href=tel:01525-378-65-21>01525 378 65 21</a>
 <span style="display: block; margin-top: 3em; font-size: 3em;">Zierikzee 2013</span>
+<img style="height:30%;background:none;margin-top:3ex;" src=Zierikzee_wappen.svg>
 <p><img src=2013-07-20_09:03:43-DSCF3313.JPG>
 <br>On the way
 <p><img src=2013-07-20_22:07:22-DSCF3316.JPG>
