new post: wahlwerbung

--- a/jo/index.html
+++ b/jo/index.html
@@ -39,6 +39,9 @@ Johannes J. Schmidt
 &nbsp;
 <a href=tel:01525-378-65-21>01525 378 65 21</a>
 <dl>
+  <dt>3. September 2013: <a href=/2013-09-wahlwerbung>Wahlwerbung</a>
+  <dd><cite>It Just Hurts</cite> - Berlin gets so ugly
+
   <dt>7. August 2013:  <a href=../2013-08-07-the-ultimate-publishing-tool>The Ultimate Publishing Tool</a>
   <dd>How I came to the conclusion that plain old HTML files are the best for publishing
   
