optimize and stylize

--- a/stadtwerden/index.html
+++ b/stadtwerden/index.html
@@ -15,7 +15,7 @@
       <header role="banner">  
         <h1>Stadtwerden</h1>
       </header>
-      <div title="Click to play!" id=player data-0="background-position:  0px top;" data-30000="background-position: -30000px top;">
+      <div title="Zum Abspielen skrollen oder anklicken" id=player data-0="background-position:  0px top;" data-30000="background-position: -30000px top;"></div>
     </main>   
   </div>
   
