currently no follow for robots

--- a/2014-27-global-migration/index.html
+++ b/2014-27-global-migration/index.html
@@ -3,6 +3,7 @@
 <title>TF: The global flow of people</title>
 <meta name=description content="Explore new estimates of migration flows between and within regions for five-year periods, 1990 to 2010. Click on a region to discover flows country-by-country. ">
 <meta name=author content="Johannes J. Schmidt, Berlin"> 
+<META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 <style>
   body {
     margin: 6.18% 10% 16.18% 10%;
