--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     margin: 0;
     font-family: Georgia, "Times New Roman", Times, serif;
     letter-spacing: 0.2ex;
-    background: white url(fuck-yeah/fuck-yeah.jpg) no-repeat top center;
+  }
+  .teaser {
+    max-width: 566px;
+    margin: 0 auto;
+    display: block;
+    height: 100%;
+    background: white url(2014-27-global-migration/euru.png) no-repeat center center;
     background-size: contain;
   }
   .contact {
@@ -34,6 +40,7 @@
   }
 </style>
 <body>
+<a href=/2014-27-global-migration/ class=teaser></a>
 <p class=contact>
 <a href="/">TF</a>
 &nbsp;
