back to old index

--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@
     margin: 0;
     font-family: Georgia, "Times New Roman", Times, serif;
     letter-spacing: 0.2ex;
-  }
-  .teaser {
-    max-width: 566px;
-    margin: 0 auto;
-    display: block;
-    height: 100%;
-    background: white url(2014-27-global-migration/euru.png) no-repeat center center;
+    background: white url(fuck-yeah/fuck-yeah.jpg) no-repeat top center;
     background-size: contain;
   }
   .contact {
@@ -40,7 +34,6 @@
   }
 </style>
 <body>
-<a href=/2014-27-global-migration/ class=teaser></a>
 <p class=contact>
 <a href="/">TF</a>
 &nbsp;
