--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <style>
   body {
     text-align: center;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
   }
   span {
     font-size: 68vh;
