--- a/index.html
+++ b/index.html
@@ -39,11 +39,19 @@
   var t = document.getElementById('t')
   var f = document.getElementById('f')
 
+  var paused = false
+
   function tick() {
-    t.innerHTML = ts[Math.floor(Math.random() * ts.length)]
-    f.innerHTML = fs[Math.floor(Math.random() * fs.length)]
+    if (!paused) {
+      t.innerHTML = ts[Math.floor(Math.random() * ts.length)]
+      f.innerHTML = fs[Math.floor(Math.random() * fs.length)]
+    }
 
     setTimeout(tick, 42)
+  }
+
+  window.onclick = window.onkeydown = function() {
+    paused = !paused
   }
 
   tick()
