--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    background-color: #3e753b;
+    color: white;
   }
   span {
     font-size: 68vh;
