--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
   body {
     text-align: center;
     overflow: hidden;
-    background-color: #3e753b;
+    background-color: #222;
     background-image: url(tafel.jpg);
     color: white;
     background-size: cover;
     background-position: center center;
-    margin-top: 5vh;
   }
   pre {
     font-size: 20vh;
     margin: 0;
     padding: 0;
+  }
+  pre:first-child {
+    margin-top: 5vh;
   }
   .rotated {
    display: inline-block;
