--- a/jo/index.html
+++ b/jo/index.html
@@ -44,17 +44,25 @@ Johannes J. Schmidt
   <dd><cite>It Just Hurts</cite> - Berlin gets so ugly
   -->
 
+   <dt>10 Jun 2015: <a href=../window>TF Erdbeeren</a>
+   <dd>TF Glyphs changing with cursor in front of Erdbeeren.
+
   <dt>7. August 2013:  <a href=../2013-08-07-the-ultimate-publishing-tool>The Ultimate Publishing Tool</a>
   <dd>How I came to the conclusion that plain old HTML files are the best for publishing
+
+  <!--
+  <dt>7. August 2013:  <a href=../2013-08-07-the-ultimate-publishing-tool>The Ultimate Publishing Tool</a>
+  <dd>How I came to the conclusion that plain old HTML files are the best for publishing
+-->
   
   <dt>1. August 2013: <a href=/fuck-yeah>FUCK YEAH!</a>
   <dd>Going public with a flower sticker.
 
   <dt>Juli 2013: <a href=/2013-08-zierikzee>Fotos of Zierikzee</a>
-  <dd>The Netherland impressions.
+  <dd>Netherland Photos
 
   <dt>Januar 2013: <a href=/kloppe>Kloppe</a>
-  <dd>T fights F
+  <dd>T fights F - animation on click
 
   <dt>2000: <a href=/cartoons>Cartoons</a>
   <dd>Very first and old TF cartoons.
