--- a/jo/index.html
+++ b/jo/index.html
@@ -35,22 +35,20 @@
 &nbsp;
 Johannes J. Schmidt
 &nbsp;
-<a href="mailto:schmidt@netzmerk.com">schmidt@netzmerk.com</a>
+
 &nbsp;
 
 <dl>
-<!--
-  <dt>3. September 2013: <a href=/2013-09-wahlwerbung>Wahlwerbung</a>
-  <dd><cite>It Just Hurts</cite> - Berlin gets so ugly
-  -->
+   <dt>8. November 2019: <a href=../2019-11-08-ikea>IKEA Rückwärts AEKI</a>
+   <dd>Mein neuester #IKEAHack: Rückwärts einkaufen. #AEKI
 
    <dt>10 Jun 2015: <a href=../window>TF Erdbeeren</a>
    <dd>TF Glyphs changing with cursor in front of Erdbeeren.
 
-  <dt>7. August 2013:  <a href=../2013-08-07-the-ultimate-publishing-tool>The Ultimate Publishing Tool</a>
-  <dd>How I came to the conclusion that plain old HTML files are the best for publishing
-
-  <!--
+<!--
+  <dt>3. September 2013: <a href=/2013-09-wahlwerbung>Wahlwerbung</a>
+  <dd><cite>It Just Hurts</cite> - Berlin gets so ugly
+  
   <dt>7. August 2013:  <a href=../2013-08-07-the-ultimate-publishing-tool>The Ultimate Publishing Tool</a>
   <dd>How I came to the conclusion that plain old HTML files are the best for publishing
 -->
