--- a/jo/index.html
+++ b/jo/index.html
@@ -39,8 +39,8 @@ Johannes J. Schmidt
 &nbsp;
 
 <dl>
-   <dt>8. November 2019: <a href=../2019-11-08-ikea>IKEA Rückwärts AEKI</a>
-   <dd>Mein neuester #IKEAHack: Rückwärts einkaufen. #AEKI
+   <dt>8. November 2019: <a href=../2019-11-08-ikea>AEKI</a>
+   <dd>Mein neuester #IKEAHack: Rückwärts einkaufen.
 
    <dt>10 Jun 2015: <a href=../window>TF Erdbeeren</a>
    <dd>TF Glyphs changing with cursor in front of Erdbeeren.
