--- a/jo/index.html
+++ b/jo/index.html
@@ -40,7 +40,10 @@ Johannes J. Schmidt
 
 <dl>
    <dt>8. November 2019: <a href=../2019-11-08-ikea>AEKI</a>
-   <dd>Mein neuester #IKEAHack: Rückwärts einkaufen.
+   <dd>IKEA Hack: Rückwärts einkaufen.
+
+   <dt>28 Nov 2016: <a href=../bank>Bank</a>
+   <dd>Bau Deine Bank mit dem Bankdesigner. Material, Preise, Interaktiv.
 
    <dt>10 Jun 2015: <a href=../window>TF Erdbeeren</a>
    <dd>TF Glyphs changing with cursor in front of Erdbeeren.
