--- a/jo/index.html
+++ b/jo/index.html
@@ -42,6 +42,12 @@ Johannes J. Schmidt
    <dt>8. November 2019: <a href=../2019-11-08-ikea>AEKI</a>
    <dd>IKEA Hack: Rückwärts einkaufen.
 
+   <dt>26 Dez 2018: <a href=../kaestchen>Kaestchen</a>
+   <dd>Kästchen aus Holzleisten
+
+   <dt>28 Nov 2016: <a href=../bank>Bank</a>
+   <dd>Bau Deine Bank mit dem Bankdesigner. Material, Preise, Interaktiv.
+
    <dt>28 Nov 2016: <a href=../bank>Bank</a>
    <dd>Bau Deine Bank mit dem Bankdesigner. Material, Preise, Interaktiv.
 
