--- a/jo/index.html
+++ b/jo/index.html
@@ -62,7 +62,7 @@ Johannes J. Schmidt
   <dd>How I came to the conclusion that plain old HTML files are the best for publishing
 -->
   
-  <dt>1. August 2013: <a href=/fuck-yeah>FUCK YEAH!</a>
+  <dt>1. August 2013: <a href=/fuck-yeah>Welcome</a>
   <dd>Going public with a flower sticker.
 
   <dt>Juli 2013: <a href=/2013-08-zierikzee>Fotos of Zierikzee</a>
